Fix date input text centering on iOS Safari
iOS Safari centers <input type="date"> text by default. Add explicit
text-align: left to .form-date-input to match other form fields.

--- a/src/styles/form.css
+++ b/src/styles/form.css
@@ -74,6 +74,7 @@
   width: auto;
   height: 40px;
   box-sizing: border-box;
+  text-align: left;
   -webkit-appearance: none;
   appearance: none;
   transition: border-color var(--transition-fast);
